Fixed the misalignment with the navbar on big screens

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -71,14 +71,14 @@ button > * {
 } */
 
 .nav-bar {
-  @apply bg-white right-0 h-full w-[45vw]
-  absolute shadow rounded 
-  p-2 min-w-[8ch] z-10 text-base lg:text-lg;
+  @apply bg-gray-50 md:bg-white right-0 h-full min-w-[45vw] md:min-w-[8ch]
+  absolute shadow rounded md:border-2 shadow-slate-400 md:shadow-gray-300
+  p-2 z-10 text-base lg:text-lg md:h-[min-content];
 }
 
 .nav-bar ul > li > * {
-  @apply p-2 cursor-pointer text-lg rounded
-  flex justify-between items-center
+  @apply p-2 md:px-1 md:p-0 cursor-pointer text-lg rounded md:shadow-none bg-white
+  flex justify-between md:justify-end items-center
   hover:bg-slate-400/50 transition-all duration-200 active:scale-95 active:translate-y-[-2px] w-full shadow;
 }
 
